@@ -39,7 +39,6 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import io.jenetics.prngine.LCG64ShiftRandom;
-
 import io.jenetics.stat.Histogram;
 import io.jenetics.util.Factory;
 import io.jenetics.util.ISeq;
@@ -277,7 +276,7 @@ public abstract class SelectorTester<S extends Selector<DoubleGene, Double>>
 
 		return parameters.stream()
 			.map(p -> distribution(selector.apply(p), opt, populationCount, loops))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 
